# biases-are-human

./: .gitignore  AGENT.md  DEVELOPMENT.md  EXPERIMENT_LOG.md  MANUAL.md  PRD.md  README.md  USERINPUT.md  charts.py  paper.md  pyproject.toml  substack-draft.md  twitter-takes.md  verification-report.html
.claude/: settings.local.json
configs/: cheap-test.yaml  deepseek-r1.yaml  default.yaml  gemini3-flash-thinking.yaml  gemini3-flash.yaml  gpt-54-medium.yaml  gpt-54-xhigh.yaml  gpt-54.yaml  grok-4.1-fast-thinking.yaml  grok-4.1-fast.yaml  kimi-k25.yaml  minimax-m27.yaml
items/: framing.json  item_bank.db  magnitude.json
logs/: bdb_20260329T041057Z.jsonl  bdb_20260329T041621Z.jsonl
results/: results.db  results_data.csv  results_detail.json  results_summary.md
src/bias_bench/: __init__.py  bundled.py  cli.py  config.py  env.py  harness.py  item_db.py  models.py  report.py  results_db.py  runner.py  scoring.py
